# friendly-discord-bot

./: .eslintrc.cjs  .gitattributes  .gitignore  .lycheignore  .prettierignore  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPORT_PLAN.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  SUPPORT.md  TECHNICAL_DEBT_RESOLUTION.md  deny.toml  eslint.config.js  future.md  gemini.md  har_useful.md  health_report.md  health_report_v2.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backport.yml  codeql-analysis.yml  docs-engine.yml  first-interaction.yml  labeler.yml  link-checker.yml  main.yml  pr-compliance.yml  pr-labeler.yml  pr-quality.yml  project-bot.yml  release-drafter.yml  secret-scanning.yml  security-audit.yml  spell-check.yml  stale.yml  wiki-masterpiece.yml  wiki-sync.yml
coverage/frontend/: coverage-final.json  index.html
rustdoc/: crates.js  help.html  settings.html  src-files.js
rustdoc/search.index/: 004be1c5495a.js  00c8232777b7.js  015a439569b5.js  01ee4430259e.js  0319b4e2f250.js  074f75293921.js  077e7942e68d.js  08ac631a6025.js  08c207103301.js  0aee0247da7d.js  105ed4599ad1.js  113937d62587.js  (+32 more)
src/: App.tsx  ci.test.ts  index.css
src-tauri/: .gitignore  Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/protos/: progress.proto
src-tauri/src/: api.rs  main.rs
src-tauri/src/api/: discord.rs  discord_routes.rs  rate_limiter.rs
src-tauri/src/api/discord/: billing.rs  bulk.rs  export.rs  footprint.rs  gdpr.rs  mod.rs  ops.rs  privacy.rs  security.rs  sync.rs  tools.rs  types.rs  verification.rs
src-tauri/src/api/discord/bulk/: guilds.rs  messages.rs  mod.rs  relationships.rs
src-tauri/src/api/discord/ops/: ghost.rs  mod.rs  purge.rs
src-tauri/src/api/rate_limiter/: actor.rs  fingerprint.rs  handle.rs  mod.rs  types.rs
src-tauri/src/auth/: identity.rs  mod.rs  oauth.rs  qr.rs  rpc.rs  state.rs  status.rs  types.rs
src-tauri/src/core/: cleanup.rs  crypto.rs  error.rs  logger.rs  mod.rs  op_manager.rs  protobuf.rs  vault.rs
src-tauri/src/core/automation/: janitor.rs  mod.rs
src-tauri/src/core/cache/: manager.rs  mod.rs  schema.rs
src-tauri/src/core/forensics/: auditor.rs  backup.rs  burner.rs  correlation.rs  export.rs  honey.rs  metadata.rs  mod.rs  pii.rs
src-tauri/src/core/forensics/auditor/: session.rs
src-tauri/src/core/vault/: commands.rs  credential.rs  encryption.rs  fallback.rs  identity.rs  mod.rs  state.rs
src-tauri/src/tests/: crypto_test.rs  error_test.rs  fingerprint_test.rs  logger_test.rs  mod.rs
src-tauri/tests/: ci_test.rs
tools/: fix_api_calls.py  fix_api_calls_v2.py  fix_api_calls_v3.py  fix_send_request.py  gen_mock_token.js  parse_har.py  validate_token.js
tsdoc/: hierarchy.html  index.html  modules.html
wiki_content/: Architecture-Account-GDPR.md  Architecture-Error-Handling.md  Architecture-OAuth2-Flow.md  Architecture-Rate-Limiting.md  CI-CD-Pipeline.md  Contributor-Onboarding.md  FAQ-Glossary.md  Home.md  Logging-Strategy.md  Project-Management.md  Project-Structure.md  Security-Privacy-Deep-Dive.md  Testing-Methodology.md  User-Stories.md
(+355 files in other folders)
