[package]
name = "src-tauri"
version = "1.2.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
keyring = "3.6.3"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
rand = "0.9.2"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.2.5"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry", "std"] }
tracing-appender = "0.2.3"
chrono = { version = "0.4.43", features = ["serde"] }
sysinfo = "0.38.2"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
ring = "0.17.14"
aes-gcm = "0.10.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
hex = "0.4.3" # NEW
rustls = { version = "0.23.36", features = ["ring"] }
prost = "0.14.3"
prost-types = "0.14.3"
uuid = { version = "1.21.0", features = ["v4"] }
socket2 = { version = "0.5.7", features = ["all"] }
tokio-util = { version = "0.7.11" }
rsa = "0.9.7"
sha2 = "0.10.8"

is_elevated = "0.1.2"
windows-sys = { version = "0.52", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
