[package]
name = "src-tauri"
version = "1.0.3"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22.1"
keyring = { version = "3.6.3", features = ["windows-native"] }
oauth2 = { version = "=4.4.2", features = ["reqwest"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry", "std"] }
tracing-appender = "0.2.3"
chrono = { version = "0.4.43", features = ["serde"] }
sysinfo = "0.38.2"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
futures = "0.3.32"
bytes = "1.11.1"
ring = "0.17.14"
aes-gcm = "0.10.1"
hex = "0.4.3"
rustls = { version = "0.23.37", features = ["ring"] }
prost = "0.14.3"
prost-types = "0.14.3"
uuid = { version = "1.21.0", features = ["v4"] }
socket2 = { version = "0.6.2", features = ["all"] }
tokio-util = { version = "0.7.11" }
rsa = "0.9.10"
sha2 = "0.10.8"
zip = "2.2.2"
tauri-plugin-dialog = "2.2.0"
walkdir = "2.5.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
little_exif = "0.6.23"
urlencoding = "2.1.3"
async-trait = "0.1.89"
regex = "1.12.3"
rand_distr = "0.4.3"

is_elevated = "0.1.2"
windows-sys = { version = "0.61", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Security_Cryptography"] }
argon2 = { version = "0.5.3", features = ["zeroize"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
